<resources>
    <string name="app_name" translatable="false">Loan EMI</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="home_native_medium" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="tools_native_medium" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="setting_native_medium" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="auto_loan_result_native_medium" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="business_loan_result_native_medium" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="fd_calc_result_native_medium" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="home_loan_result_native_medium" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="personal_loan_result_native_medium" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="rd_calc_result_native_medium" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="student_loan_result_native_medium" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="splash_banner" translatable="false">ca-app-pub-3940256099942544/9214589741</string>
    <string name="splash_inter_1" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="splash_inter_2" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="language_first_native_1" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="language_first_native_2" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="language_second_native_1" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="language_second_native_2" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="done_inter_language_1" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="done_inter_language_2" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="language_done_fullscreen_native_1" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="language_done_fullscreen_native_2" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="first_onboarding_native_1" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="first_onboarding_native_2" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="full_first_native_1" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="full_first_native_2" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="full_second_native_1" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="full_second_native_2" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="native_get_started_1" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="native_get_started_2" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="auto_loan_banner" translatable="false">ca-app-pub-3940256099942544/9214589741</string>
    <string name="age_calc_banner" translatable="false">ca-app-pub-3940256099942544/9214589741</string>
    <string name="exchange_rate_banner" translatable="false">ca-app-pub-3940256099942544/9214589741</string>
    <string name="length_convert_banner" translatable="false">ca-app-pub-3940256099942544/9214589741</string>
    <string name="speed_convert_banner" translatable="false">ca-app-pub-3940256099942544/9214589741</string>
    <string name="temperature_convert_banner" translatable="false">ca-app-pub-3940256099942544/9214589741</string>
    <string name="weight_convert_banner" translatable="false">ca-app-pub-3940256099942544/9214589741</string>
    <string name="business_loan_banner" translatable="false">ca-app-pub-3940256099942544/9214589741</string>
    <string name="cash_calc_banner" translatable="false">ca-app-pub-3940256099942544/9214589741</string>
    <string name="currency_unit_banner" translatable="false">ca-app-pub-3940256099942544/9214589741</string>
    <string name="fd_loan_banner" translatable="false">ca-app-pub-3940256099942544/9214589741</string>
    <string name="home_loan_banner" translatable="false">ca-app-pub-3940256099942544/9214589741</string>
    <string name="personal_loan_banner" translatable="false">ca-app-pub-3940256099942544/9214589741</string>
    <string name="rd_calc_banner" translatable="false">ca-app-pub-3940256099942544/9214589741</string>
    <string name="student_loan_banner" translatable="false">ca-app-pub-3940256099942544/9214589741</string>
    <string name="privacy_policy_url" translatable="false"></string>
    <string name="share_text" translatable="false">LoanEMI App with Privacy. Click here…: https://play.google.com/store/apps/details?id=</string>
    <string name="tagline">Smart Calculations, Instant Results</string>
    <string name="hero_title">Let\'s plan your finances</string>
    <string name="we_maintain_our_policy">We Maintain Our Policy…</string>
    <string name="hero_sub">Choose a calculator and get instant results.</string>
    <string name="section_loan_calculators">Loan Calculators</string>
    <string name="loan_calculator">Loan Calculator</string>
    <string name="business_loan">Business Loan</string>
    <string name="home_loan">Home Loan</string>
    <string name="home_loan_result">Home Loan Result</string>
    <string name="auto_loan">Auto Loan</string>
    <string name="loan_freedom">Loan Freedom</string>
    <string name="student_loan">Student Loan</string>
    <string name="calculate_emi">Calculate your EMI</string>
    <string name="countdown_calculator">Countdown Calculator</string>
    <string name="partner_title">Your Financial Partner</string>
    <string name="partner_sub">Easy • Fast • Reliable</string>
    <string name="get_started">Get Started</string>
    <string name="nav_home">Home</string>
    <string name="nav_tools">Tools</string>
    <string name="nav_history">History</string>
    <string name="nav_setting">Setting</string>
    <string name="cd_menu">Menu</string>
    <string name="cd_notifications">Notifications</string>
    <string name="cd_illustration">Illustration</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ad">Ad</string>
    <string name="install">Install</string>
    <string name="language">Language</string>
    <string name="lang_desc">Please select language to continue</string>
    <string name="please_wait">Please wait…</string>
    <string name="loading_ads">Ads Loading…</string>
    <string name="skip_in">Skip in %1$d\u0073</string>
    <string name="please_select_language">Please Select Language</string>
    <string name="get_start_title">Keep Your Memories \n<font color="#2196F3">Safe &amp; Private</font></string>
    <string name="getstart_dis">Protect your photos and videos with privacy and security.</string>
    <string name="get_start">Get Start</string>
    <string name="smart_gallery_for_every_moment">Smart Gallery\n For <font color="#2196F3">Every Moment</font></string>
    <string name="all_your_memories_organized_beautifully_in_one_place">All your memories organized \nbeautifully in one place.</string>
    <string name="next">Next</string>
    <string name="fast_access_to_nyour_photos_amp_videos">Fast Access to \nYour <font color="#2196F3">Photos &amp; Videos</font></string>
    <string name="quickly_find_and_view_all_your_nfavorite_photos_and_videos">Quickly find and view all your\nfavorite photos and videos.</string>
    <string name="fragment_3_title">Create &amp; Manage  \nYour <font color="#2196F3">Albums</font></string>
    <string name="fragment_3_dis">Organize your memories into albums and keep them stored.</string>
    <string name="investment_amount">Investment Amount</string>
    <string name="loan_information">Loan Information</string>
    <string name="result_after_calculation">Result After Calculation</string>
    <string name="share_pdf">📄 Share PDF</string>
    <string name="setting">Setting</string>
    <string name="change_language">Change Language</string>
    <string name="theme">Theme</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="share_app">Share App</string>
    <string name="rate_us">Rate Us</string>
    <string name="version">Version</string>
    <string name="rate_select_star">Please select a star to rate us</string>
    <string name="thanks_for_your_support">Thanks for your support!\n😍</string>
    <string name="rate_desc">We are working hard for a better user experience.\nWe’d greatly appreciate if you can rate us.</string>
    <string name="the_best_we_can_get">The best we can get</string>
    <string name="rate">Rate</string>
    <string name="choose_your_theme">Choose Your Theme</string>
    <string name="_default">Default</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="save">Save</string>
    <string name="age_calculator">Age Calculator</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="years">Years</string>
    <string name="calculate_age">Calculate Age</string>
    <string name="your_age">Your Age</string>
    <string name="as_of_today">As of today</string>
    <string name="months">Months</string>
    <string name="days">Days</string>
    <string name="next_birthday">Next Birthday</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="loan_term">Loan Term</string>
    <string name="start_date">Start Date</string>
    <string name="reset_fields">Reset Fields</string>
    <string name="calculate">Calculate</string>
    <string name="auto_loan_result">Auto Loan Result</string>
    <string name="monthly_payment">Monthly Payment</string>
    <string name="total_payment">Total Payment</string>
    <string name="total_interest_paid">Total Interest Paid</string>
    <string name="pay_off_date">Pay-Off date</string>
    <string name="enter_the_loan_amount">Enter the loan amount</string>
    <string name="enter_annual_interest_rate">Enter annual interest rate</string>
    <string name="select_loan_term_and_unit">Select loan term and unit</string>
    <string name="select_the_loan_start_date">Select the loan start date</string>
    <string name="cash_calculator">Cash Calculator</string>
    <string name="currency">Currency</string>
    <string name="select_currency">Select currency</string>
    <string name="denomination">Denomination</string>
    <string name="number_of_notes">Number of Notes</string>
    <string name="total_amount">Total Amount</string>
    <string name="currency_unit">Currency Unit</string>
    <string name="exchange_rate">Exchange Rate</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="fd_calculator">FD Calculator</string>
    <string name="enter_the_investment_amount">Enter the investment amount</string>
    <string name="expected_interest_rate">Expected Interest Rate</string>
    <string name="time_interest">Time Interest</string>
    <string name="down_payment">Down payment</string>
    <string name="total_investment_amount">Total Investment Amount</string>
    <string name="total_interest_value">Total Interest Value</string>
    <string name="maturity_value">Maturity Value</string>
    <string name="recurring_deposit_result">Recurring Deposit Result</string>
</resources>