<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical"
    android:padding="24dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:text="@string/choose_your_theme"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroupTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl">

        <RadioButton
            android:id="@+id/radioDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_default"
            android:textColor="@color/text_color"
            app:buttonTint="@color/blue" />

        <RadioButton
            android:id="@+id/radioDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme"
            android:textColor="@color/text_color"
            app:buttonTint="@color/blue" />

        <RadioButton
            android:id="@+id/radioLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/light_theme"
            android:textColor="@color/text_color"
            app:buttonTint="@color/blue" />

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSaveTheme"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_38sdp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_button"
        android:backgroundTint="@color/blue"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp" />

</androidx.appcompat.widget.LinearLayoutCompat>
