<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">


    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="64dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="9dp"
            android:src="@drawable/back_ic"
            app:tint="@color/header_blue_dark" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/recurring_deposit_result"
            android:textColor="@color/header_blue_dark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/btnHome"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_marginEnd="12dp"
            android:padding="9dp"
            android:src="@drawable/result_home_ic"
            app:tint="@color/header_blue_dark" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tvLoanInformationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/loan_information"
        android:textColor="@color/header_blue_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loanInformationCard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bg_input_field"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLoanInformationTitle"
        app:layout_constraintHeight_min="120dp"
        app:layout_constraintHeight_max="170dp">

        <TextView
            android:id="@+id/labelLoanAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/loan_amount"
            android:textColor="@color/grey"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvLoanAmount"
            app:layout_constraintTop_toTopOf="@id/tvLoanAmount"
            app:layout_constraintBottom_toBottomOf="@id/tvLoanAmount" />

        <TextView
            android:id="@+id/tvLoanAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/grey"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/labelInterestRate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/interest_rate"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvInterestRate"
            app:layout_constraintTop_toTopOf="@id/tvInterestRate"
            app:layout_constraintBottom_toBottomOf="@id/tvInterestRate" />

        <TextView
            android:id="@+id/tvInterestRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLoanAmount" />

        <TextView
            android:id="@+id/labelLoanTerm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/loan_term"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvLoanTerm"
            app:layout_constraintTop_toTopOf="@id/tvLoanTerm"
            app:layout_constraintBottom_toBottomOf="@id/tvLoanTerm" />

        <TextView
            android:id="@+id/tvLoanTerm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvInterestRate" />

        <TextView
            android:id="@+id/labelStartDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/down_payment"
            android:textColor="@color/grey"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvStartDate"
            app:layout_constraintTop_toTopOf="@id/tvStartDate"
            app:layout_constraintBottom_toBottomOf="@id/tvStartDate" />

        <TextView
            android:id="@+id/tvStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLoanTerm"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvResultTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="14dp"
        android:text="@string/result_after_calculation"
        android:textColor="@color/header_blue_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loanInformationCard" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/resultCard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bg_input_field"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvResultTitle"
        app:layout_constraintHeight_min="120dp"
        app:layout_constraintHeight_max="170dp">

        <TextView
            android:id="@+id/labelMonthly"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/total_investment_amount"
            android:textColor="@color/grey"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvMonthlyPayment"
            app:layout_constraintTop_toTopOf="@id/tvMonthlyPayment"
            app:layout_constraintBottom_toBottomOf="@id/tvMonthlyPayment" />

        <TextView
            android:id="@+id/tvMonthlyPayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="190dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/grey"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/labelTotalPayment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/total_interest_value"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvTotalPayment"
            app:layout_constraintTop_toTopOf="@id/tvTotalPayment"
            app:layout_constraintBottom_toBottomOf="@id/tvTotalPayment" />

        <TextView
            android:id="@+id/tvTotalPayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="190dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/grey"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMonthlyPayment" />

        <TextView
            android:id="@+id/labelTotalInterest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/maturity_value"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvTotalInterest"
            app:layout_constraintTop_toTopOf="@id/tvTotalInterest"
            app:layout_constraintBottom_toBottomOf="@id/tvTotalInterest" />

        <TextView
            android:id="@+id/tvTotalInterest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="190dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/grey"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTotalPayment" />

        <TextView
            android:id="@+id/labelPayOff"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/down_payment"
            android:textColor="@color/grey"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvPayOffDate"
            app:layout_constraintTop_toTopOf="@id/tvPayOffDate"
            app:layout_constraintBottom_toBottomOf="@id/tvPayOffDate" />

        <TextView
            android:id="@+id/tvPayOffDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textColor="@color/grey"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTotalInterest"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomButtonsContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/nativeContainer">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSharePdf"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:background="@drawable/bg_button_outline"
            android:minHeight="0dp"
            android:text="@string/share_pdf"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/nativeContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <FrameLayout
            android:id="@+id/rd_calc_native_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/native_shimmer_layout"
                layout="@layout/shimmer_native_medium" />

        </FrameLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>